--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,regular,500&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,regular,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="/css/style.css">
     <title>SaulDesign</title>
 </head>
@@ -13,13 +13,58 @@
 <body>
     <div class="wrapper">
         <header class="header">
-            header
+            <div class="header__container">
+                <div class="header__logo">
+                    <img src="/img/logo.svg" alt="Logo">
+                </div>
+                <nav class="header__menu menu">
+                    <ul class="menu__list">
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Home</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">About Me</a>
+                        </li>
+                        <li class="menu__item">
+                            <a href="#" class="menu__link">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main class="page">
-            page
+
         </main>
         <footer class="footer">
-            footer
+            <div class="footer__container">
+                <nav class="footer__menu menu-footer">
+                    <ul class="menu-footer__list">
+                        <il class="menu-footer__item">
+                            <a href="" class="menu-footer__link menu-footer__link_home">Home</a>
+                        </il>
+                        <il class="menu-footer__item">
+                            <a href="" class="menu-footer__link menu-footer__link_about">About me</a>
+                        </il>
+                        <il class="menu-footer__item">
+                            <a href="" class="menu-footer__link menu-footer__link_contact">Contact</a>
+                        </il>
+                    </ul>
+                </nav>
+                <div class="footer__social social">
+                    <a href="#" class="social__link">
+                        <img src="/img/icons/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="/img/icons/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="/img/icons/twitter.svg" alt="Twitter">
+                    </a>
+                    <a href="#" class="social__link">
+                        <img src="/img/icons/youtube.svg" alt="Youtube">
+                    </a>
+                </div>
+            </div>
         </footer>
     </div>
     <script src="js/script.js"></script>
