--- a/index.html
+++ b/index.html
@@ -33,7 +33,22 @@
             </div>
         </header>
         <main class="page">
-
+            <section class="page__main main">
+                <div class="main__container">
+                    <div class="main__content">
+                        <h1 class="main__title">CREATIVE UI<br><span>DESIGNER</span></h1>
+                        <div class="main__buttons">
+                            <a href="#" class="main__hire-button button">Hire me</a>
+                            <a href="#" class="main__cv-button button button_dark">
+                                <span>Download CV</span>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="main__image">
+                        <img src="/img/main/image.svg" alt="Image">
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container">
