page__works__end

--- a/index.html
+++ b/index.html
@@ -67,6 +67,36 @@
                     </div>
                 </div>
             </section>
+            <section class="page__works works">
+                <div class="works__container">
+                    <h2 class="works__title title">My recent <span>works</span></h2>
+                    <div class="works__items items-works">
+                        <nav class="items-works__navigation">
+                            <button class="items-works__type button button_dark active">All</button>
+                            <button class="items-works__type button button_dark">UI</button>
+                            <button class="items-works__type button button_dark">UX</button>
+                            <button class="items-works__type button button_dark">Web Design</button>
+                        </nav>
+                        <div class="items-works__body">
+                            <a href="#" class="items-works__item">
+                                <div class="items-works__image">
+                                    <img src="/img/works/items/01.png" alt="Image">
+                                </div>
+                            </a>
+                            <a href="#" class="items-works__item">
+                                <div class="items-works__image">
+                                    <img src="/img/works/items/02.png" alt="Image">
+                                </div>
+                            </a>
+                            <a href="#" class="items-works__item">
+                                <div class="items-works__image">
+                                    <img src="/img/works/items/03.png" alt="Image">
+                                </div>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
             <div class="footer__container">
