--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
                 <nav class="header__menu menu">
                     <ul class="menu__list">
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Home</a>
+                            <a data-goto=".main" href="#" class="menu__link">Home</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">About Me</a>
+                            <a data-goto=".about" href="#" class="menu__link">About Me</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#" class="menu__link">Contact</a>
+                            <a data-goto=".contacts" href="#" class="menu__link">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -132,13 +132,14 @@
                 <nav class="footer__menu menu-footer">
                     <ul class="menu-footer__list">
                         <il class="menu-footer__item">
-                            <a href="" class="menu-footer__link menu-footer__link_home">Home</a>
+                            <a data-goto=".main" href="" class="menu-footer__link menu-footer__link_home">Home</a>
                         </il>
                         <il class="menu-footer__item">
-                            <a href="" class="menu-footer__link menu-footer__link_about">About me</a>
+                            <a data-goto=".about" href="" class="menu-footer__link menu-footer__link_about">About me</a>
                         </il>
                         <il class="menu-footer__item">
-                            <a href="" class="menu-footer__link menu-footer__link_contact">Contact</a>
+                            <a data-goto=".contacts" href=""
+                                class="menu-footer__link menu-footer__link_contact">Contact</a>
                         </il>
                     </ul>
                 </nav>
