--- a/index.html
+++ b/index.html
@@ -72,23 +72,23 @@
                     <h2 class="works__title title">My recent <span>works</span></h2>
                     <div class="works__items items-works">
                         <nav class="items-works__navigation">
-                            <button class="items-works__type button button_dark active">All</button>
-                            <button class="items-works__type button button_dark">UI</button>
-                            <button class="items-works__type button button_dark">UX</button>
-                            <button class="items-works__type button button_dark">Web Design</button>
+                            <button data-work-type="" class="items-works__type button button_dark active">All</button>
+                            <button data-work-type="ui" class="items-works__type button button_dark">UI</button>
+                            <button data-work-type="ux" class="items-works__type button button_dark">UX</button>
+                            <button data-work-type="wd" class="items-works__type button button_dark">Web Design</button>
                         </nav>
                         <div class="items-works__body">
-                            <a href="#" class="items-works__item">
+                            <a data-work-type="ui" href="#" class="items-works__item">
                                 <div class="items-works__image">
                                     <img src="/img/works/items/01.png" alt="Image">
                                 </div>
                             </a>
-                            <a href="#" class="items-works__item">
+                            <a data-work-type="ux" href="#" class="items-works__item">
                                 <div class="items-works__image">
                                     <img src="/img/works/items/02.png" alt="Image">
                                 </div>
                             </a>
-                            <a href="#" class="items-works__item">
+                            <a data-work-type="wd" href="#" class="items-works__item">
                                 <div class="items-works__image">
                                     <img src="/img/works/items/03.png" alt="Image">
                                 </div>
